Create first data file

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Andrew Robillard</title>
+  <title>{{ site.data.site.title }}</title>
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
