--- a/_sass/utilities/_variables.scss
+++ b/_sass/utilities/_variables.scss
@@ -1,5 +1,5 @@
 // Styles
-$font-primary: Montserrat, sans-serif;
+$font-primary: sans-serif;
 $transition: .25s ease-in-out;
 $transition-quick: .15s ease-in-out;
 $border-radius: 5px;
