Upload video BG test

--- a/_includes/patterns/footer.liquid
+++ b/_includes/patterns/footer.liquid
@@ -1,3 +1,4 @@
-<footer class="footer">
-  Footer
+<footer id="footer" class="footer" role="contentinfo">
+  <p>{{ siteInfo.title }}</p>
+  {% include utilities/nav.liquid navId="footer-nav" navClass="footer-nav" %}
 </footer>
