--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -62,6 +62,7 @@
     ]
   }
 </script>
+<script src="/js/main.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//f.vimeocdn.com/js/froogaloop2.min.js"></script>
 <script>
