--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,24 +5,8 @@
 @import 'modules/type';
 @import 'modules/colors';
 @import 'styles/typography';
+@import 'patterns/banners';
 
-.vimeo-wrapper {
-   position: relative;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 80vh;
-   z-index: -1;
-   pointer-events: none;
-   overflow: hidden;
-   iframe {
-      width: 100vw;
-      height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
-      min-height: 100vh;
-      min-width: 177.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-   }
+.vimeo-pop-up {
+  border: 2px solid red;
 }
