--- a/_sass/styles/_typography.scss
+++ b/_sass/styles/_typography.scss
@@ -1,3 +1,62 @@
 html {
   font-family: $font-primary;
+  background-color: #333;
+  color: #fff;
+}
+
+a {
+  color: #fff;
+  transition: all $transition;
+}
+
+.line-highlight {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  position: relative;
+  &.absolute {
+    position: absolute;
+  }
+  &::after,
+  &::before {
+    content: ' ';
+    position: absolute;
+    width: 3rem;
+    height: 3px;
+    background-color: #fff;
+    opacity: 0;
+    transition:
+      opacity .25s,
+      left 1.5s cubic-bezier(.15,.88,.94,1.14),
+      right 1.5s cubic-bezier(.15,.88,.94,1.14);
+  }
+  &::before {
+    top: 0;
+    right: -1rem;
+  }
+  &::after {
+    left: -1rem;
+    bottom: 0;
+  }
+  &:hover::before,
+  &:focus::before {
+    opacity: 1;
+    right: calc(50% - .5rem);
+  }
+  &:hover::after,
+  &:focus::after {
+    opacity: 1;
+    left: calc(50% - .5rem);
+  }
+}
+
+.video-player-link:hover .line-highlight::before,
+.video-player-link:focus .line-highlight::before {
+  opacity: 1;
+  right: calc(50% - .5rem);
+}
+.video-player-link:hover .line-highlight::after,
+.video-player-link:focus .line-highlight::after {
+  opacity: 1;
+  left: calc(50% - .5rem);
 }
