Home page build

--- a/_includes/patterns/footer.liquid
+++ b/_includes/patterns/footer.liquid
@@ -1,7 +1,7 @@
 <footer id="footer" class="footer" role="contentinfo">
-  <div class="wrapper island">
-    <strong class="logo block peta"><a href="/">{{ siteInfo.title }}</a></strong>
-    <ul class="list-group-inline icon-list push-0">
+  <div class="wrapper grid island-1-2">
+    <strong class="unit [ xs-1 m-1-2 ] island-1-2 logo peta"><a href="/">{{ siteInfo.title }}</a></strong>
+    <ul class="unit [ xs-1 m-1-2 ] island-1-2 list-group-inline icon-list push-0">
       <li>
         <a class="icon-link inline-block" href="mailto:{{ site.data.site.email }}">
           <i class="icon i-3-4">
