--- a/_sass/styles/_typography.scss
+++ b/_sass/styles/_typography.scss
@@ -9,6 +9,11 @@ a {
   transition: all $transition;
 }
 
+h2 {
+  display: inline-block;
+}
+
+h2,
 .line-highlight {
   color: #fff;
   text-decoration: none;
@@ -21,10 +26,10 @@ a {
   &::before {
     content: ' ';
     position: absolute;
-    width: 3rem;
+    max-width: 3rem;
+    width: 33.3333%;
     height: 3px;
     background-color: #fff;
-    opacity: 0;
     transition:
       opacity .25s,
       left 1.5s cubic-bezier(.15,.88,.94,1.14),
@@ -38,6 +43,13 @@ a {
     left: -1rem;
     bottom: 0;
   }
+}
+
+.line-highlight {
+  &::after,
+  &::before {
+    opacity: 0;
+  }
   &:hover::before,
   &:focus::before {
     opacity: 1;
@@ -50,6 +62,12 @@ a {
   }
 }
 
+button.line-highlight {
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+}
+
 .video-player-link:hover .line-highlight::before,
 .video-player-link:focus .line-highlight::before {
   opacity: 1;
@@ -59,4 +77,8 @@ a {
 .video-player-link:focus .line-highlight::after {
   opacity: 1;
   left: calc(50% - .5rem);
+}
+
+.markdown p:last-child {
+  margin-bottom: 0;
 }
