--- a/_includes/patterns/form.liquid
+++ b/_includes/patterns/form.liquid
@@ -4,29 +4,25 @@
     {% if field.type == 'textarea' %}
       <input id="{{ field.label | downcase | replace: ' ','-' }}" name="{{ field.label | downcase | replace: ' ','-' }}" placeholder="{% if field.placeholder %}{{ field.placeholder }}{% else %}{{ field.label }}*{% endif %}">
       <label class="hidden" for="{{ field.label | downcase | replace: ' ','-' }}">{{ field.label }}</label>
+    {% elsif field.type == 'radio' %}
+      <p class="bold mega push-1-2">{{ field.name }}:</p>
+      {% for option in field.options %}
+      <input type="radio" id="{{ option.label | downcase | replace: ' ','-' }}" name="{{ field.name }}">
+      <label class="push-r-1-2" for="{{ option.label | downcase | replace: ' ','-' }}">{{ option.label }}</label>
+      {% endfor %}
+    {% elsif field.type == 'checkbox' %}
+      <p class="bold mega push-1-2">{{ field.name }}:</p>
+      {% for option in field.options %}
+      <input type="checkbox" id="{{ option.label | downcase | replace: ' ','-' }}" name="{{ field.name }}">
+      <label class="push-r-1-2" for="{{ option.label | downcase | replace: ' ','-' }}">{{ option.label }}</label>
+      {% endfor %}
     {% else %}
       <input {% unless field.type == 'text' %}type="{{ field.type }}" {% endunless %}id="{{ field.label | downcase | replace: ' ','-' }}" name="{{ field.label | downcase | replace: ' ','-' }}" placeholder="{% if field.placeholder %}{{ field.placeholder }}{% else %}{{ field.label }}*{% endif %}">
       <label class="hidden" for="{{ field.label | downcase | replace: ' ','-' }}">{{ field.label }}</label>
     {% endif %}
     </div>
   {% endfor %}
-  <!-- <div class="unit [ xs-1 m-1-2 ] island-1-2">
-    <input id="full-name" name="full-name" placeholder="Full Name*">
-    <label class="hidden" for="full-name">Full Name</label>
-  </div>
-  <div class="unit [ xs-1 m-1-2 ] island-1-2">
-    <input id="email" name="email" placeholder="Email*">
-    <label class="hidden" for="email">Email</label>
-  </div>
   <div class="unit [ xs-1 ] island-1-2">
-    <input id="subject" name="subject" placeholder="Subject*">
-    <label class="hidden" for="subject">Subject</label>
-  </div>
-  <div class="unit [ xs-1 ] island-1-2">
-    <textarea id="message" name="message" placeholder="Message*"></textarea>
-    <label class="hidden" for="message">Message</label>
-  </div> -->
-  <div class="unit [ xs-1 ] island-1-2">
-    <button class="line-highlight giga bold" type="submit">Submit</button>
+    <button class="line-highlight tera bold" type="submit">{{ include.form.submit }}</button>
   </div>
 </form>
