Major layout update

--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -1,4 +1,4 @@
-<div class="vimeo-banner" style="background-image: url('{{ include.img }}')">
+<div class="vimeo-banner" data-video-link="{{ include.video }}" style="background-image: url('{{ include.img }}')">
   <div class="vimeo-banner-overlay">
     <div class="vimeo-banner-content">
       <strong class="yotta vimeo-banner-title block">{{ include.title }}</strong>
