--- a/_includes/patterns/footer.liquid
+++ b/_includes/patterns/footer.liquid
@@ -5,7 +5,7 @@
       <li>
         <a class="icon-link inline-block" href="mailto:{{ site.data.site.email }}">
           <i class="icon i-3-4">
-            <svg><use xlink:href="images/icons.svg#email" /></svg>
+            <svg><use xlink:href="/images/icons.svg#email" /></svg>
           </i>
           <span class="icon-label hidden">Click to email me directly.</span>
         </a>
@@ -14,7 +14,7 @@
       <li>
         <a class="icon-link inline-block" href="{{ icons.url }}">
           <i class="icon i-3-4">
-            <svg><use xlink:href="images/icons.svg#{{ icons.type }}" /></svg>
+            <svg><use xlink:href="/images/icons.svg#{{ icons.type }}" /></svg>
           </i>
           <span class="icon-label hidden">Link to {{ icons.type | capitalize }} account.</span>
         </a>
@@ -24,7 +24,7 @@
   </div>
   <div class="grid wrapper sub-footer island-1-2">
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
-      <small>© Andrew Robillard 2020</small>
+      <small>© Andrew Robillard {{ "now" | date: "%Y" }}</small>
     </div>
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
       <small>Designed and developed by <a href="https://adamrobillard.ca">Adam Robillard</a></small>
