--- a/_includes/patterns/footer.liquid
+++ b/_includes/patterns/footer.liquid
@@ -30,4 +30,5 @@
       <small>Designed and developed by <a href="https://adamrobillard.ca">Adam Robillard</a></small>
     </div>
   </div>
+  <a class="to-top" href="#top" aria-label="Return to top of the page">To Top</a>
 </footer>
