--- a/_includes/utilities/nav.liquid
+++ b/_includes/utilities/nav.liquid
@@ -6,8 +6,13 @@
     <li>
       <a href="/#about">About</a>
     </li>
-    <li>
+    <li class="has-dropdown">
       <a href="/behind-the-scenes">Behind the Scenes</a>
+      <ol class="list-group push-0 dropdown pad-t-1-2 gutter-1-2">
+        {% for bts in site.behind-the-scenes %}
+        <li><a href="{{site.baseurl}}/{{ bts.url }}">{{ bts.title }}</a></li>
+        {% endfor %}
+      </ol>
     </li>
     <li>
       <a href="/#contact">Contact</a>
