--- a/_sass/patterns/_footer.scss
+++ b/_sass/patterns/_footer.scss
@@ -19,6 +19,11 @@
           margin-right: 1rem;
         }
       }
+      .icon-link {
+        @include hov() {
+          opacity: .75;
+        }
+      }
     }
   }
   .sub-footer {
@@ -33,6 +38,18 @@
       .unit:last-child {
         text-align: right;
       }
+    }
+  }
+  .to-top {
+    position: fixed;
+    display: inline-block;
+    padding: 1.3rem;
+    background-color: $color-primary;
+    bottom: 0;
+    right: 0;
+    transform: translateY(100%);
+    @include hov() {
+      transform: none;
     }
   }
 }
