--- a/_includes/utilities/nav.liquid
+++ b/_includes/utilities/nav.liquid
@@ -10,7 +10,7 @@
       <a href="/behind-the-scenes">Behind the Scenes</a>
       <ol class="list-group push-0 dropdown pad-t-1-2 gutter-1-2">
         {% for bts in site.behind-the-scenes %}
-        <li><a href="{{site.baseurl}}/{{ bts.url }}">{{ bts.title }}</a></li>
+        <li><a href="{{site.baseurl}}{{ bts.url }}">{{ bts.title }}</a></li>
         {% endfor %}
       </ol>
     </li>
