Add proper reel link

--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -4,7 +4,7 @@
       <strong class="yotta vimeo-banner-title block">{{ include.title }}</strong>
     </div>
     <div class="pin-cb scroller-wrap">
-      <a class="reel-link text-upper inline-block" href="#video-player">Watch Reel</a>
+      <a class="reel-link text-upper inline-block" href="#video-player" data-video-link="{{ include.reel }}" >Watch Reel</a>
       <a class="scroller inline-block" href="#work" aria-label="Select to view work samples.">
       </a>
     </div>
