--- a/_sass/patterns/_header.scss
+++ b/_sass/patterns/_header.scss
@@ -13,7 +13,7 @@
     left: 0;
     width: 100%;
     height: 0;
-    background-color: #333;
+    background-color: #1a1a1a;
     transition:
       width $transition,
       height $transition;
