--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -1,7 +1,12 @@
-<div class="vimeo-banner" data-video-link="{{ include.video }}" style="background-image: url('{{ include.img }}')">
+<div class="vimeo-banner" data-video-link="{{ include.banner.video }}" style="background-image: url('{{ include.banner.img }}')">
   <div class="vimeo-banner-overlay">
     <div class="vimeo-banner-content">
-      <strong class="yotta vimeo-banner-title block">{{ include.title }}</strong>
+      <h2 class="yotta vimeo-banner-title text-center">{{ include.banner.title }}</h2>
+      {% if include.banner.byline %}<p class="vimeo-banner-byline text-center max-length">{{ include.banner.byline }}</p>{% endif %}
+      {% if include.banner.btn.url %}<div class="banner-btn-wrap text-center">
+        <a class="line-highlight bold tera" href="{{ include.banner.btn.url }}">{{ include.banner.btn.text }}</a>
+      </div>
+      {% endif %}
     </div>
     <div class="pin-cb scroller-wrap">
       <a class="reel-link text-upper inline-block" href="#video-player" data-video-link="{{ include.reel }}" >Watch Reel</a>
