--- a/_sass/patterns/_header.scss
+++ b/_sass/patterns/_header.scss
@@ -76,7 +76,7 @@
       width: 100%;
       height: 100vh;
       padding-top: 3.23625rem;
-      background-color: #333;
+      background-color: #1a1a1a;
       transition: transform $transition;
       transform: translateY(-100%);
       z-index: -1;
