Fixed banner auto pause/play issue

--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -1,6 +1,6 @@
 <div class="vimeo-banner" data-video-link="{{ include.banner.video }}" style="background-image: url('{{ include.banner.img }}')">
   <div class="vimeo-banner-overlay">
-    <div class="vimeo-banner-content">
+    <div class="vimeo-banner-content gutter-2">
       <h2 class="yotta vimeo-banner-title text-center">{{ include.banner.title }}</h2>
       {% if include.banner.byline %}<p class="vimeo-banner-byline text-center max-length">{{ include.banner.byline }}</p>{% endif %}
       {% if include.banner.btn.url %}<div class="banner-btn-wrap text-center">
