--- a/_includes/utilities/nav.liquid
+++ b/_includes/utilities/nav.liquid
@@ -7,7 +7,7 @@
       <a href="/#about">About</a>
     </li>
     <li class="has-dropdown">
-      <span>Behind the Scenes</span>
+      <a class="no-link" href="#">Behind the Scenes</a>
       <ol class="list-group push-0 dropdown pad-t-1-2 gutter-1-2">
         {% for bts in site.behind-the-scenes %}
         <li><a href="{{site.baseurl}}{{ bts.url }}">{{ bts.title }}</a></li>
