--- a/_sass/patterns/_banners.scss
+++ b/_sass/patterns/_banners.scss
@@ -69,6 +69,16 @@
       }
     }
   }
+  @media only screen and (max-width: 38em) {
+
+    .vimeo-banner-title {
+      &::after,
+      &::before {
+        display: none;
+      }
+    }
+
+  }
   .scroller-wrap {
     display: flex;
     flex-direction: column;
