--- a/_sass/patterns/_header.scss
+++ b/_sass/patterns/_header.scss
@@ -164,7 +164,7 @@
     width: 100vw;
     height: 100vh;
     transform: translateY(-100%);
-    background-color: #333;
+    background-color: #1a1a1a;
     opacity: .9;
     z-index: 9999;
     // display: none;
