--- a/_sass/patterns/_header.scss
+++ b/_sass/patterns/_header.scss
@@ -130,7 +130,7 @@
             position: absolute;
             width: 1.5rem;
             height: 2px;
-            background-color: #fff;
+            background-color: $line-color;
             opacity: 0;
             left: -.5rem;
             bottom: 0;
