--- a/_sass/utilities/_variables.scss
+++ b/_sass/utilities/_variables.scss
@@ -21,3 +21,4 @@ $color-tertiary-light: lighten($color-tertiary, 10%);
 $color-grey: #ccc;
 $color-grey-dark: #444;
 $color-grey-light: #f2f2f2;
+$line-color: #ff7a00;
