--- a/_sass/patterns/_banners.scss
+++ b/_sass/patterns/_banners.scss
@@ -50,7 +50,7 @@
         position: absolute;
         width: 3rem;
         height: 3px;
-        background-color: #fff;
+        background-color: $line-color;
         // opacity: 0;
         transition:
           opacity .25s,
@@ -108,7 +108,7 @@
       left: 50%;
       width: 3px;
       height: 50%;
-      background-color: #fff;
+      background-color: $line-color;
       transform: translate(-50%, -75%);
       animation: scrollShift 1.5s cubic-bezier(.75, 0, .25, 1) alternate infinite;
     }
