--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap');
 @import 'utilities/variables';
 @import 'utilities/mixins';
 @import 'modules/modules';
