--- a/_sass/styles/_typography.scss
+++ b/_sass/styles/_typography.scss
@@ -20,6 +20,7 @@ h2 {
 
 h2,
 .line-highlight {
+  letter-spacing: $tracking;
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
