--- a/_sass/utilities/_variables.scss
+++ b/_sass/utilities/_variables.scss
@@ -1,10 +1,11 @@
 // Styles
-$font-primary: 'Merriweather Sans', sans-serif;
+$font-primary: 'Poppins', sans-serif;
 $transition: .25s cubic-bezier(.75, 0, .25, 1);
 $transition-quick: .15s ease-in-out;
 $border-radius: 5px;
 $shadow: 0 1px 3px rgba(0, 0, 0, .15);
 $shadow-hover: 0 3px 6px rgba(0, 0, 0, .15);
+$tracking: 5px;
 
 // Colors
 $color-primary: #17853D;
