Add content disable functionality

--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -4,7 +4,7 @@
       <h2 class="yotta vimeo-banner-title text-center">{{ include.banner.title }}</h2>
       {% if include.banner.byline %}<p class="vimeo-banner-byline text-center max-length">{{ include.banner.byline }}</p>{% endif %}
       {% if include.banner.btn.url %}<div class="banner-btn-wrap text-center">
-        <a class="line-highlight bold tera" href="{{ include.banner.btn.url }}">{{ include.banner.btn.text }}</a>
+        <a class="line-highlight banner-btn-orange-bg bold tera" href="{{ include.banner.btn.url }}">{{ include.banner.btn.text }}</a>
       </div>
       {% endif %}
     </div>
