--- a/_includes/patterns/header.liquid
+++ b/_includes/patterns/header.liquid
@@ -1,6 +1,6 @@
 <header class="masthead" role="banner">
   <div class="wrapper gutter pad-t-1-2 pad-b-1-2">
-    <a class="menu-tog m-0" href="#nav-footer" aria-label="Navigation toggle">
+    <a class="menu-tog" href="#nav-footer" aria-label="Navigation toggle">
       <span id="tog-top" class="tog-top"></span>
       <span id="tog-middle" class="tog-middle"></span>
       <span id="tog-bottom" class="tog-bottom"></span>
