--- a/_includes/patterns/image-text-split-top-aligned.liquid
+++ b/_includes/patterns/image-text-split-top-aligned.liquid
@@ -1,17 +1,15 @@
 <section id="{{ include.title | slugify }}" class="push-2">
   <div class="wrapper pad-t-2 pad-b-2">
-    <div class="grid grid-middle island-1-2{% if include.overlap == true %} overlap{% endif %}{% if include.flipped == true %} flipped{% endif %}">
+    <div class="grid grid-top island-1-2{% if include.overlap == true %} overlap{% endif %}{% if include.flipped == true %} flipped{% endif %}">
       <div class="unit [ xs-1 m-1-2 ] island-1-2{% if include.overlap == true %} overlap-img{% endif %}">
         <div class="embed embed-16by9 bg-grey-dark">
           <img class="embed-item" src="{{ include.img }}" alt="">
         </div>
       </div>
       <div class="unit [ xs-1 m-1-2 ] island-1-2{% if include.overlap == true %} overlap-text{% endif %}">
-        <div class="">
-          <h2>{{ include.title }}</h2>
-          <div class="markdown">
-            {{ include.content | markdownify }}
-          </div>
+        <h2>{{ include.title }}</h2>
+        <div class="markdown">
+          {{ include.content | markdownify }}
         </div>
       </div>
     </div>
