--- a/_includes/patterns/img-banner.liquid
+++ b/_includes/patterns/img-banner.liquid
@@ -1,2 +1,2 @@
-<div id="{{ include.title | downcase | replace: ' ','-' }}" class="push-2 img-banner" style="background-image: url('{{ include.img }}');">
+<div id="{{ include.title | slugify }}" class="push-2 img-banner" style="background-image: url('{{ include.img }}');">
 </div>
