--- a/_sass/patterns/_header.scss
+++ b/_sass/patterns/_header.scss
@@ -25,7 +25,8 @@
     height: 100%;
     // width: 100%;
   }
-  h1 {
+  h1,
+  .logo {
     letter-spacing: $tracking;
   }
   @media only screen and (min-width: 38em) and (max-width: 750px) {
@@ -50,7 +51,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-content: flex-end;
-    @include min(38) {
+    @include min(60) {
       display: none;
     }
     span {
@@ -72,7 +73,11 @@
     }
   }
   .nav {
-    @include max(37.999) {
+    a {
+      text-transform: uppercase;
+      letter-spacing: .1em;
+    }
+    @include max(59.999) {
       position: fixed;
       top: 0;
       left: 0;
@@ -96,7 +101,6 @@
           a {
             display: inline-block;
             font-size: 1.7926rem;
-            text-transform: uppercase;
             text-decoration: none;
             opacity: 0;
             transform: translateY(50%);
@@ -115,7 +119,7 @@
         }
       }
     }
-    @include min(38) {
+    @include min(60) {
       ul {
         display: flex;
         li {
@@ -152,13 +156,13 @@
     }
   }
   &.open .nav {
-    @include max(37.999) {
+    @include max(59.999) {
       transform: translateY(0);
     }
   }
 }
 
-@media only screen and (min-width: 38em) {
+@media only screen and (min-width: 60em) {
 
   .nav-focus-bg {
     position: fixed;
@@ -181,6 +185,7 @@
     left: 0;
     top: 100%;
     max-height: 0;
+    width: 20em;
     overflow: hidden;
     transition:
       max-height $transition-quick;
@@ -188,7 +193,7 @@
       padding-bottom: .7rem
     }
     li {
-      white-space: nowrap;
+      // white-space: nowrap;
       text-transform: uppercase;
     }
   }
