--- a/_sass/patterns/_banners.scss
+++ b/_sass/patterns/_banners.scss
@@ -157,15 +157,16 @@
   }
   .banner-btn-orange-outline {
     color: $line-color;
-    border: 3px solid transparent;
+    border: 3px solid $line-color;
     padding: .25em 1em;
+    display: inline-block;
     &::after,
     &::before {
       display: none;
     }
     @include hov() {
-      border-color: $line-color;
-      // color: #fff;
+      background-color: $line-color;
+      color: #fff;
     }
   }
 }
