--- a/_includes/patterns/footer.liquid
+++ b/_includes/patterns/footer.liquid
@@ -1,34 +1,41 @@
-<footer id="footer" class="footer" role="contentinfo">
+<footer class="footer" id="footer" role="contentinfo">
   <div class="wrapper grid island-1-2">
-    <strong class="unit [ xs-1 m-1-2 ] island-1-2 logo peta"><a href="/">{{ siteInfo.title }}</a></strong>
+    <strong class="unit [ xs-1 m-1-2 ] island-1-2 logo peta">
+      <a href="/">{{ siteInfo.title }}</a>
+    </strong>
     <ul class="unit [ xs-1 m-1-2 ] island-1-2 list-group-inline icon-list push-0">
       <li>
         <a class="icon-link inline-block" href="mailto:{{ site.data.site.email }}">
           <i class="icon i-3-4">
-            <svg><use xlink:href="/images/icons.svg#email" /></svg>
+            <svg><use xlink:href="/images/icons.svg#email"/></svg>
           </i>
           <span class="icon-label hidden">Click to email me directly.</span>
         </a>
       </li>
       {% for icons in site.data.site.social %}
-      <li>
-        <a class="icon-link inline-block" href="{{ icons.url }}">
-          <i class="icon i-3-4">
-            <svg><use xlink:href="/images/icons.svg#{{ icons.type }}" /></svg>
-          </i>
-          <span class="icon-label hidden">Link to {{ icons.type | capitalize }} account.</span>
-        </a>
-      </li>
+        <li>
+          <a class="icon-link inline-block" href="{{ icons.url }}">
+            <i class="icon i-3-4">
+              <svg><use xlink:href="/images/icons.svg#{{ icons.type }}"/></svg>
+            </i>
+            <span class="icon-label hidden">Link to
+              {{ icons.type | capitalize }}
+              account.</span>
+          </a>
+        </li>
       {% endfor %}
     </ul>
   </div>
   <div class="grid wrapper sub-footer island-1-2">
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
-      <small>© Andrew Robillard {{ "now" | date: "%Y" }}</small>
+      <small>© Andrew Robillard
+        {{ "now" | date: "%Y" }}</small>
     </div>
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
-      <small>Designed and developed by <a href="https://adamrobillard.ca">Adam Robillard</a></small>
+      <small>Designed and developed by
+        <a href="https://adamrobillard.ca" rel="external">Adam Robillard</a>
+      </small>
     </div>
   </div>
-  <a class="to-top" href="#top" aria-label="Return to top of the page">To Top</a>
+  <a aria-label="Return to top of the page" class="to-top" href="#top">To Top</a>
 </footer>
