--- a/_includes/patterns/image-text-split-top-aligned.liquid
+++ b/_includes/patterns/image-text-split-top-aligned.liquid
@@ -3,7 +3,7 @@
     <div class="grid grid-top island-1-2{% if include.overlap == true %} overlap{% endif %}{% if include.flipped == true %} flipped{% endif %}">
       <div class="unit [ xs-1 m-1-2 ] island-1-2{% if include.overlap == true %} overlap-img{% endif %}">
         <div class="embed embed-16by9 bg-grey-dark">
-          <img class="embed-item" src="{{ include.img }}" alt="">
+          <img class="embed-item" src="{{ include.img }}" alt="{{ include.alt }}">
         </div>
       </div>
       <div class="unit [ xs-1 m-1-2 ] island-1-2{% if include.overlap == true %} overlap-text{% endif %}">
