--- a/_sass/patterns/_banners.scss
+++ b/_sass/patterns/_banners.scss
@@ -16,6 +16,15 @@
   // z-index: -1;
   overflow: hidden;
   @include bgBasic();
+  video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+  }
   iframe {
     pointer-events: none;
     width: 100vw;
