Hide test video

--- a/_includes/patterns/banners/vimeo-banner.liquid
+++ b/_includes/patterns/banners/vimeo-banner.liquid
@@ -1,5 +1,5 @@
 <div class="vimeo-banner" data-video-link="{{ include.banner.video }}" style="background-image: url('{{ include.banner.img }}')">
-  <video src="./images/03-buttons.mov" autoplay muted loop></video>
+  <!-- <video src="./images/03-buttons.mov" autoplay muted loop></video> -->
   <div class="vimeo-banner-overlay">
     <div class="vimeo-banner-content gutter-2">
       <h2 class="yotta vimeo-banner-title text-center">{{ include.banner.title }}</h2>
